--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,19 +1,23 @@
 <!doctype html>
-	<title>AboutFeelzApp</title>
+
+<html>
 	<head>
+		<title>AboutFeelzApp</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<link href="/css/bootstrap.min.css" rel="stylesheet">
-			<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-			<link href="/css/about_and_help.css" rel="stylesheet">
-			<link href="/css/simple-sidebar.css" rel="stylesheet">
-			<link href="/css/feelzNaviBar.css" rel="stylesheet">
-			<link href="css/FeelzApp.css" rel="stylesheet">
+		<!-- bootstrap css files -->
+		<link href="/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+		<!-- feelzapp universal css files -->
+		<link href="/css/simple-sidebar.css" rel="stylesheet">
+		<link href="/css/feelzNaviBar.css" rel="stylesheet">
+		<link href="css/FeelzApp.css" rel="stylesheet">
+		<!-- page css files -->
+		<link href="/css/about_and_help.css" rel="stylesheet">
 	</head>
 
 	<body>
-
-		<div id="wrapper">
+		<div id="sideBarWrapper">
 			<!-- fixed position navibar on top of screen -->
 			{{>feelzNaviBarNoPost}}
 
@@ -75,7 +79,6 @@
 			<!-- end page-content-wrapper -->
 		</div>
 		<!-- end wrapper-->
-
 	</body>
 
 	<!-- Bootstrap core JavaScript
@@ -83,8 +86,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/sidebarSetup.js"></script>
-	<script src="js/logout.js"></script>
-	<script src="js/help_accordion.js"></script>
+	<!-- feelzApp universal js files -->
+	<script src="/js/feelzApp.js"></script>
+	<!-- page js files -->
+	<script src="/js/help_accordion.js"></script>
 
 </html>
