--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -5,17 +5,20 @@
 	<title>FeelzApp</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- bootstrap css files -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="/css/FeelzApp.css" rel="stylesheet">
+	<!-- feelzapp universal css files -->
 	<link href="/css/simple-sidebar.css" rel="stylesheet">
 	<link href="/css/feelzNaviBar.css" rel="stylesheet">
+	<link href="/css/FeelzApp.css" rel="stylesheet">
+	<!-- page css files -->
 	<link href="/css/accSettings.css" rel="stylesheet">
 
 
 <body>
 
-	<div id="wrapper">
+	<div id="sideBarWrapper">
 
 		<!-- fixed position navibar on top of screen -->
 		{{>feelzNaviBarNoPost}}
@@ -62,9 +65,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<!-- feelzApp universal js files -->
+	<script src="/js/feelzApp.js"></script>
+	<!-- feelzApp universal js files -->
 	<script src="/js/changePassword.js"></script>
-	<script src="/js/sidebarSetup.js"></script>
-	<script src="js/logout.js"></script>
 
 
 </html>
