--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -3,18 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-		<link href="css/about_and_help.css" rel="stylesheet">
+		<!-- bootstrap css files -->
+		<link href="/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+		<!-- feelzapp universal css files -->
 		<link href="/css/simple-sidebar.css" rel="stylesheet">
-		<link href="css/feelzNaviBar.css" rel="stylesheet">
+		<link href="/css/feelzNaviBar.css" rel="stylesheet">
 		<link href="css/FeelzApp.css" rel="stylesheet">
-
+		<!-- page css files -->
+		<link href="/css/about_and_help.css" rel="stylesheet">
 	</head>
 
 	<body>
 
-		<div id="wrapper">
+		<div id="sideBarWrapper">
 			<!-- fixed position navibar on top of screen -->
 			{{>feelzNaviBarNoPost}}
 
@@ -92,12 +94,13 @@
 
 	    <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/sidebarSetup.js"></script>
-	<script src="js/logout.js"></script>
-	<script src="js/help_accordion.js"></script>
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<!-- feelzApp universal js files -->
+	<script src="/js/feelzApp.js"></script>
+	<!-- page js files -->
+	<script src="/js/help_accordion.js"></script>
 	
 
 	
