--- a/views/forgotPass.handlebars
+++ b/views/forgotPass.handlebars
@@ -3,13 +3,16 @@
 <html>
   <head>
     <title>Login to FeelzApp</title>
-      <!-- Latest compiled and minified CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-      <!-- Optional theme -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no ">
+    <!-- bootstrap css files -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+    <!-- feelzapp universal css files -->
+    <link href="/css/simple-sidebar.css" rel="stylesheet">
     <link href="/css/feelzNaviBar.css" rel="stylesheet">
+    <link href="css/FeelzApp.css" rel="stylesheet">
+    <!-- page css files -->
 
   </head>
 
