--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -50,7 +50,6 @@
 	position: fixed;
 	background-color: rgba(0,0,0,0.5);
 	overflow: auto;
-	min-height: 200px;
 }
 
  /*  new post page */
@@ -65,7 +64,7 @@ form {
 }
 
 #popup_container_form {
-	margin-top: 10%;
+	padding-top: 50px;
 	width: 100%;
 	height: 100%;
 	opacity: .95;
@@ -74,16 +73,17 @@ form {
 	display: none;
 	position: fixed;
 	background-color: rgba(0,0,0,0.5);
-	overflow: auto
+	overflow: auto;
+
 }
 
 #newpost_form {
-	position:absolute;
-	min-height: 200px;
 	width: 90%;
-	left: 5%;
 	height: 80%;
-	top: 10%;
+	margin-top: 5%;
+	margin-left: auto;
+	margin-right: auto;
+	min-height: 450px;
 	/*font-family:'Raleway',sans-serif */
 }
 
