--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -79,11 +79,11 @@ form {
 
 #newpost_form {
 	width: 90%;
-	height: 88%;
+	height: 400px;
 	margin-top: 5%;
 	margin-left: auto;
 	margin-right: auto;
-	min-height: 450px;
+	
 	/*font-family:'Raleway',sans-serif */
 }
 
